--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <HTML>
 <TITLE>
-Patasi Carbon
+Patasi Carbon Bike Frames Repairs
 </TITLE>
 <BODY>
-<B>Hello Peter Pattasi<B>
+<B>Hello<B>
 <BR>
 <HR>
-<B>Hello Duro Oravsky<B>
+<B>Patasi Carbon Bike Frames Repairs ... coming soon<B>
 </BODY>
 </HTML>
 
